user swagger codegen
